--- a/public/index.html
+++ b/public/index.html
@@ -624,7 +624,7 @@
                                 width="307"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
                                 alt="DigiPants hero banner showing digital marketing graphic">
-                            <div class="change-this-image team-6">
+                            <div class="change-this-image team-3">
                                 <div class="hover-bg">
                                     <div class="hover-content">
                                         <div class="social-icons">
@@ -675,7 +675,7 @@
                                 width="307"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
                                 alt="DigiPants hero banner showing digital marketing graphic">
-                            <div class="change-this-image team-3">
+                            <div class="change-this-image team-4">
                                 <div class="hover-bg">
                                     <div class="hover-content">
                                         <div class="social-icons">
@@ -726,7 +726,7 @@
                                 width="307"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
                                 alt="DigiPants hero banner showing digital marketing graphic">
-                            <div class="change-this-image team-4">
+                            <div class="change-this-image team-5">
                                 <div class="hover-bg">
                                     <div class="hover-content">
                                         <div class="social-icons">
@@ -777,7 +777,42 @@
                                 width="307"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
                                 alt="DigiPants hero banner showing digital marketing graphic">
-                            <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18567" class="change-this-image team-5">
+                            <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18567" class="change-this-image team-6">
+                                <div class="hover-bg">
+                                    <div class="hover-content">
+                                        <div class="social-icons">
+                                            <div class="social-1"><a rel="noopener"
+                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c1856c"
+                                                    href="https://www.facebook.com/harshita.verma.528" target="_blank"
+                                                    class="social-icon-rounded facebook w-inline-block">
+                                                    <div class="social-icons-container">
+                                                        <div class="social-icon-up facebook"></div>
+                                                        <div class="social-icon-down facebook"></div>
+                                                    </div>
+                                                </a></div>
+                                            <div class="social-2"><a rel="noopener"
+                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18571"
+                                                    href="https://twitter.com/harshita2012199" target="_blank"
+                                                    class="social-icon-rounded twittter w-inline-block">
+                                                    <div class="social-icons-container">
+                                                        <div class="social-icon-up twitter"></div>
+                                                        <div class="social-icon-down twitter"></div>
+                                                    </div>
+                                                </a></div>
+                                            <div class="social-3"><a rel="noopener"
+                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18576"
+                                                    href="https://www.instagram.com/verma_harshita/" target="_blank"
+                                                    class="social-icon-rounded instagram w-inline-block">
+                                                    <div class="social-icons-container">
+                                                        <div class="social-icon-up instagram"></div>
+                                                        <div class="social-icon-down instagram"></div>
+                                                    </div>
+                                                </a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18567" class="change-this-image team-7">
                                 <div class="hover-bg">
                                     <div class="hover-content">
                                         <div class="social-icons">
