--- a/public/index.html
+++ b/public/index.html
@@ -812,6 +812,22 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="team-text-box">
+                            <h5 class="team-name">Harshita Verma</h5>
+                            <div>
+                                <div class="team-title">Content</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18564" class="team-item _5">
+                        <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18565" class="link-preview-hidden"><img
+                                src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp"
+                                loading="lazy"
+                                sizes="(max-width: 479px) 86vw, (max-width: 767px) 43vw, (max-width: 1279px) 25vw, 307px"
+                                width="307"
+                                srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
+                                alt="DigiPants hero banner showing digital marketing graphic">
                             <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18567" class="change-this-image team-7">
                                 <div class="hover-bg">
                                     <div class="hover-content">
