--- a/src/index.html
+++ b/src/index.html
@@ -712,9 +712,9 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Tushaar Maurya</h5>
+                            <h5 class="team-name">Kshama Tiwari</h5>
                             <div>
-                                <div class="team-title">Filmmaker</div>
+                                <div class="team-title">Content Writer</div>
                             </div>
                         </div>
                     </div>
@@ -763,9 +763,9 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Atharv Sharma</h5>
+                            <h5 class="team-name">Himanshu Singh</h5>
                             <div>
-                                <div class="team-title">designer</div>
+                                <div class="team-title">Frontend</div>
                             </div>
                         </div>
                     </div>
@@ -814,9 +814,9 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Harshita Verma</h5>
+                            <h5 class="team-name">Aryan Bhaskar</h5>
                             <div>
-                                <div class="team-title">Content</div>
+                                <div class="team-title">Backend</div>
                             </div>
                         </div>
                     </div>
@@ -865,9 +865,9 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Harshita Verma</h5>
+                            <h5 class="team-name">Parul Verma</h5>
                             <div>
-                                <div class="team-title">Content</div>
+                                <div class="team-title">Graphics</div>
                             </div>
                         </div>
                     </div>
