Update social media links in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -630,25 +630,16 @@
                                         <div class="social-icons">
                                             <div class="social-1"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18518"
-                                                    href="https://www.facebook.com/iamkrishnaditya" target="_blank"
+                                                    href="https://www.linkedin.com/in/aman-kharwar-0a6843212/" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
                                                 </a></div>
-                                            <div class="social-2"><a rel="noopener"
-                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c1851d"
-                                                    href="https://www.twitter.com/iamkrishnadigi" target="_blank"
-                                                    class="social-icon-rounded twittter w-inline-block">
-                                                    <div class="social-icons-container">
-                                                        <div class="social-icon-up twitter"></div>
-                                                        <div class="social-icon-down twitter"></div>
-                                                    </div>
-                                                </a></div>
                                             <div class="social-3"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18522"
-                                                    href="https://www.instagram.com/iamkrishnaditya/" target="_blank"
+                                                    href="https://www.instagram.com/its_amankhare/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
@@ -681,25 +672,16 @@
                                         <div class="social-icons">
                                             <div class="social-1"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18534"
-                                                    href="https://www.facebook.com/gpuftw" target="_blank"
+                                                    href="https://www.linkedin.com/in/kshama-tiwari-138903231/" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
                                                 </a></div>
-                                            <div class="social-2"><a rel="noopener"
-                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18539"
-                                                    href="https://twitter.com/gpuftw1337" target="_blank"
-                                                    class="social-icon-rounded twittter w-inline-block">
-                                                    <div class="social-icons-container">
-                                                        <div class="social-icon-up twitter"></div>
-                                                        <div class="social-icon-down twitter"></div>
-                                                    </div>
-                                                </a></div>
                                             <div class="social-3"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c1853e"
-                                                    href="https://www.instagram.com/tushaarmaurya/" target="_blank"
+                                                    href="https://www.instagram.com/tiwari_ksh_/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
@@ -732,25 +714,16 @@
                                         <div class="social-icons">
                                             <div class="social-1"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18550"
-                                                    href="https://www.facebook.com/gurun.pratapsingh.5" target="_blank"
+                                                    href="https://www.linkedin.com/in/himanshusingh261" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
                                                 </a></div>
-                                            <div class="social-2"><a rel="noopener"
-                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18555"
-                                                    href="https://twitter.com/atharvui" target="_blank"
-                                                    class="social-icon-rounded twittter w-inline-block">
-                                                    <div class="social-icons-container">
-                                                        <div class="social-icon-up twitter"></div>
-                                                        <div class="social-icon-down twitter"></div>
-                                                    </div>
-                                                </a></div>
                                             <div class="social-3"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c1855a"
-                                                    href="https://www.instagram.com/atharv.__09/" target="_blank"
+                                                    href="https://www.instagram.com/_singh.0110_" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
@@ -783,25 +756,16 @@
                                         <div class="social-icons">
                                             <div class="social-1"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c1856c"
-                                                    href="https://www.facebook.com/harshita.verma.528" target="_blank"
+                                                    href="https://www.linkedin.com/in/aryan-bhashkar" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
                                                 </a></div>
-                                            <div class="social-2"><a rel="noopener"
-                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18571"
-                                                    href="https://twitter.com/harshita2012199" target="_blank"
-                                                    class="social-icon-rounded twittter w-inline-block">
-                                                    <div class="social-icons-container">
-                                                        <div class="social-icon-up twitter"></div>
-                                                        <div class="social-icon-down twitter"></div>
-                                                    </div>
-                                                </a></div>
                                             <div class="social-3"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18576"
-                                                    href="https://www.instagram.com/verma_harshita/" target="_blank"
+                                                    href="https://www.instagram.com/with.rn0/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
@@ -834,25 +798,16 @@
                                         <div class="social-icons">
                                             <div class="social-1"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c1856c"
-                                                    href="https://www.facebook.com/harshita.verma.528" target="_blank"
+                                                    href="https://linkedin.com/in/parul-maurya-3951b22b1" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
                                                 </a></div>
-                                            <div class="social-2"><a rel="noopener"
-                                                    data-w-id="48461a41-2f5b-0218-426c-e664d4c18571"
-                                                    href="https://twitter.com/harshita2012199" target="_blank"
-                                                    class="social-icon-rounded twittter w-inline-block">
-                                                    <div class="social-icons-container">
-                                                        <div class="social-icon-up twitter"></div>
-                                                        <div class="social-icon-down twitter"></div>
-                                                    </div>
-                                                </a></div>
                                             <div class="social-3"><a rel="noopener"
                                                     data-w-id="48461a41-2f5b-0218-426c-e664d4c18576"
-                                                    href="https://www.instagram.com/verma_harshita/" target="_blank"
+                                                    href="https://www.instagram.com/parulmaurya_17?igsh=aWFoYWN1OGVvMTJp" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
