Update team member name from Parul Verma to Parul Maurya

--- a/public/index.html
+++ b/public/index.html
@@ -820,7 +820,7 @@
                             </div>
                         </div>
                         <div class="team-text-box">
-                            <h5 class="team-name">Parul Verma</h5>
+                            <h5 class="team-name">Parul Maurya</h5>
                             <div>
                                 <div class="team-title">Graphics</div>
                             </div>
